monitoring/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.anynamefits.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
  tls:
  - secretName: grafana-cert-production
    hosts:
      - grafana.anynamefits.ru
