monitoring/loki-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: loki-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: loki.anynamefits.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: loki-gateway
            port:
              number: 80
